Minor code improvements, whitespace fixes, etc.; added open/beforeopen/close/beforeclose events courtesy of acdvorak

--- a/jquery.selectBox.css
+++ b/jquery.selectBox.css
@@ -5,6 +5,7 @@
 	border: solid 1px #BBB;
 	line-height: 1.5;
 	text-decoration: none;
+	text-align: left;
 	color: #000;
 	outline: none;
 	vertical-align: middle;
